<resources>
    <string name="app_name">Aviation Learning</string>
    <string name="track_selection_title">Video Quality</string>
    <string name="no_internet">No internet</string>
    <string name="server_error">Server error</string>
    <string name="parser_error">Server Response error</string>
    <string name="wrong">Some thing went wrong</string>
    <string name="turn_on_internet">Please turn on internet before proceeding.</string>
    <string name="ok">OK</string>
    <string name="flytrom"><u>PILOT LEARNING</u></string>
    <string name="password">Password</string>
    <string name="forgot_password">Fogot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="please_enter_your_registered_email">Please enter your registered email</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_optional">Email Address (Optional)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_pass">Create Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="optional">Optional</string>
    <string name="cpl_number">Licence Number (optional)</string>
    <string name="atpl_number">ATPL Number</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="enter_your_phone_number_to_register">Enter your phone number to Register</string>
    <string name="xxxxxxxxxx">XXXXXXXXXX</string>
    <string name="no_data_found">No data found</string>
    <string name="_continue">Continue</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="videos">Videos</string>
    <string name="qbank">QBank</string>
    <string name="tests">Tests</string>
    <string name="not_valid_token">Not a valid token</string>
    <string name="enter_otp">Please enter otp</string>
    <string name="enter_valid_phone_number">Please enter valid phone number</string>
    <string name="something_went_wrong">Something is wrong, we will fix it soon…</string>
    <string name="invalid_code">Invalid code entered…</string>
    <string name="videos_completed">Videos Completed</string>
    <string name="question_attempted">Question Attempted</string>
    <string name="mcq_of_the_day">MCQ of the day</string>
    <string name="video_lectures">Video Lectures</string>
    <string name="q_bank">QBank</string>
    <string name="buy_now">BUY NOW</string>
    <string name="see_plans">SEE PLANS</string>
    <string name="plans">Plans</string>
    <string name="pro">PRO</string>
    <string name="free_lectures">Free Lectures</string>
    <string name="test_series">Test Series</string>
    <string name="text_bookmarks">Bookmarks</string>
    <string name="custom_test">Create Custom Test</string>
    <string name="customised_mcqs">Customised MCQs</string>
    <string name="edit">Edit</string>
    <string name="text_my_subscription">MY SUBSCRIPTION</string>
    <string name="text_my_subscription_small">My Subscription</string>
    <string name="text_my_profile">My Profile</string>
    <string name="completed">Completed</string>
    <string name="review_mcq">Review MCQ</string>
    <string name="title_mark_complete">Mark Complete</string>
    <string name="_10">10</string>
    <string name="_25">25</string>
    <string name="_50">50</string>
    <string name="no_of_questions">No. of Questions:</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="all">All</string>
    <string name="choose_level">Choose level</string>
    <string name="create_custom_test">Create Custom Test</string>
    <string name="select_subject">Select Subject</string>
    <string name="choose_subjects">Choose Subjects</string>
    <string name="_91">+91</string>
    <string name="questions_from">Questions from:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="mode">Mode</string>
    <string name="solve_caps">SOLVE</string>
    <string name="review_caps">REVIEW</string>
    <string name="start_now">Start now</string>
    <string name="discard_and_create_new_test">Discard and create new test</string>
    <string name="review">Review</string>
    <string name="start_your_custom_test">Start Your Custom Test</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_optional">Phone Number (Optional)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enable_media_permission">Enable Media Permission</string>
    <string name="text_logout"><u>Logout</u></string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="update">UPDATE</string>
    <string name="text_slides">Slides</string>
    <string name="text_notes">Notes</string>
    <string name="old_pass">Old Password</string>
    <string name="download">Download</string>
    <string name="text_how_was_your_experience">How was your experience with this Video?</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_rate">Rate</string>
    <string name="text_hey_are_you_sure_you_want_to_logout">Hey! Are you sure you want to logout?</string>
    <string name="_0">0</string>
    <string name="text_no_topic_found">No Topic Found</string>
    <string name="text_our_mission">- Our Mission -</string>
    <string name="text_about_us">About Us</string>
    <string name="text_terms_conditions">Terms and Conditions</string>
    <string name="text_saved_lectures">Saved Lectures</string>
    <string name="text_about_us_description">Our love for aviation is very old, and we started to share the knowledge which we gathered over years to our fellow aviators by means of digital media. Flytrom Learning is a part of multiple solutions provided for different kind of aviation services.
    \n\nOur mission at Flytrom is to make the education more accessible and transparent. Today we provide the most updated solutions &amp; insights in the aviation industry. We want to make this data available to as many fellow aviators as possible.</string>
    <string name="text_to_provide_the_best_education">To provide the best Education and services related to Aviation.</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="text_via_mobile_or_whats_app"><u>Via Mobile or WhatsApp</u></string>
    <string name="text_flytrom_number">(+91) 9941–737–737</string>
    <string name="text_email"><u>Email</u></string>
    <string name="text_flytrom_email">support@flytrom.com</string>
    <string name="text_report_piracy"><u>Report Piracy</u></string>
    <string name="text_piracy_heading_one">• You will be rewarded for your effort of reporting and stopping Piracy</string>
    <string name="text_piracy_heading_two"> • Your name and identity will never be shared and will be kept anonymous</string>
    <string name="text_your_name">Your Name (Optional)</string>
    <string name="text_description_required">Description (Required)</string>
    <string name="text_upload_picture_or_video">Upload Picture or video</string>
    <string name="text_reset">Reset</string>
    <string name="text_are_you_sure">Are you sure?</string>
    <string name="text_you_will_not_be">You won\'t be able to recover  this module again</string>
    <string name="text_delete">Delete</string>
    <string name="text_submit_rating"><u>Submit Rating</u></string>
    <string name="text_to_help_us">To help us improve, please provide\nyour rating for this module:</string>
    <string name="text_report_error"><u>Please describe error</u></string>
    <string name="text_write_here">Write here…</string>
    <string name="text_reset_test">Reset Test</string>
    <string name="text_free_tests">Free Tests</string>
    <string name="text_download_mcqs_for_offline_use">Download this MCQs for offline use</string>
    <string name="text_download_tests_for_offline_use">Download this test for offline use</string>
    <string name="text_all_chapters">All Chapters</string>
    <string name="text_no_chapter_found">No chapter found</string>
    <string name="text_free_questions">Free Questions</string>
    <string name="text_loading">Loading…</string>
    <string name="title_subjects">Subjects</string>
    <string name="text_apply_referral_code">Apply referral code</string>
    <string name="title_coupon_code">Coupon code</string>
    <string name="text_applied">Applied</string>
    <string name="text_apply">Apply</string>
    <string name="title_buy_now">BUY NOW</string>
    <string name="title_my_plans">My Plan</string>
    <string name="title_purchased">Purchased</string>
    <string name="title_marked_completed">Marked Completed</string>
    <string name="downloaded">Downloaded</string>
    <string name="title_video_lectures">Video Lectures</string>
    <string name="title_chapter_wise_lectures">• Chapter wise Lectures</string>
    <string name="title_chapter_notes">• Chapter Notes</string>
    <string name="title_important_screenshots">• Important Screenshots</string>
    <string name="title_doubt_clearance_via_chat">• Doubt Clearance Via Chat</string>
    <string name="text_6_months">6 Months</string>
    <string name="text_doubts">Doubts</string>
    <string name="timeline_of_lecture">Timeline of Lecture</string>
    <string name="timeline">Timeline</string>
    <string name="title_coming_soon">Coming Soon</string>
    <string name="title_remove_downloaded_chapter">Are you sure you want to remove downloaded chapter?</string>
    <string name="title_remove_downloaded_test">Are you sure you want to remove downloaded test?</string>
    <string name="title_remove_downloaded_video">Are you sure you want to remove downloaded video?</string>
    <string name="title_un_mark_completed_video">Are you sure you want to Un mark completed video?</string>
    <string name="title_reset_bookmarks">Are you sure you want to reset Bookmarks?</string>
    <string name="title_reset_qbank">Are you sure you want to reset QBank?</string>
    <string name="title_reset_tests">Are you sure you want to reset Tests?</string>
    <string name="text_yes">Yes</string>
    <string name="title_see_explanation">See Explanation</string>
    <string name="title_notification">Notification</string>
    <string name="title_reset">Reset</string>
    <string name="text_warning">Warning!\nAll your progress so far will be lost and it can not be reversed.</string>
    <string name="title_lectures">Lectures</string>
    <string name="title_app_settings">App Settings</string>
    <string name="title_view_receipt">View Invoice</string>
    <string name="text_close">Close</string>
    <string name="title_faqs">FAQs</string>
    <string name="all_completed">All completed</string>
    <string name="mcqs">MCQs</string>
    <string name="exit">Exit</string>
    <string name="text_want_to_exit_flow">You want to exit this flow!</string>
    <string name="text_do_you_know">Do You Know</string>
    <string name="text_hundred_percent">0%</string>
    <string name="text_ok">OK</string>
    <string name="text_please_wait_to_update_details">Please wait, we are updating your payment details at backend, Thank You!</string>
    <string name="plan_one_title">Videos</string>
    <string name="plan_two_title">QBank + Test Series</string>
    <string name="plan_three_title">Videos + QBank + Test Series</string>
    <string name="_0_percent_discount">0% Discount</string>
    <string name="title_coupon_discount">Coupon discount</string>
    <string name="text_view_plans">View Plans</string>
    <string name="text_dismiss">Dismiss</string>
</resources>