<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.flytrom.learning.base.BaseCallback" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/partial_toolbar_back"
            app:callback="@{callback}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomTextViewRegular"
                    android:text="@string/text_our_mission"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    style="@style/CustomTextViewRegular"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/text_to_provide_the_best_education"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    style="@style/CustomTextViewRegular"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/text_about_us"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    style="@style/CustomTextViewRegular"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/text_about_us_description"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/text_view_flytrom"
                    style="@style/CustomTextViewRegular"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/text_about_us"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>
