<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="callback"
            type="com.flytrom.learning.base.BaseCustomDialog.DialogListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/text_message"
            style="@style/CustomTextViewRegular"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/text_hey_are_you_sure_you_want_to_logout"
            android:textColor="@color/gray" />

        <Button
            android:id="@+id/btn_view_plans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/blue_text_color"
            android:fontFamily="@font/poppins_regular"
            android:onClick="@{(v)->callback.onViewClick(v)}"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/text_view_plans"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/text_dismiss"
            style="@style/CustomTextViewRegular"
            android:layout_width="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="@{(v)->callback.onViewClick(v)}"
            android:padding="@dimen/_3sdp"
            android:text="@string/text_dismiss"
            android:textColor="@color/blue_text_color"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

</layout>
